--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     
     <!-- Your own stylesheet -->
-    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   </head>
   
   <body>
