--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </head>
   
   <body>
+    <img scr="/header.png" alt="laptop slightly closed">
     <div class="container d-flex align-items-center h-100">
       <div class="row">
         <header class="text-center col-12">
